README.md added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=user-service
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/supplyfellow
+spring.datasource.username=supplyfellowuser
+spring.datasource.password=supplyfellowpass
+
+
+# JPA/Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-bean-definition-overriding=true
+logging.level.org.springframework=DEBUG
+
+
+# Eureka Client
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.instance.preferIpAddress=true
+
+# Application port
+server.port=8081
